# polkadot-docs

./: .CONTRIBUTING.md  .editorconfig  .gitignore  .nav.yml  .pages  .urlignore  .vale.ini  AGENTS.md  CONTRIBUTING.md  Makefile  Makefile.bat  README.md  agent_skills_config.json  ai-chatbot-policy.md  ai-resources.md  cookie-policy.md  dockerfile-mcp.yaml  get-support.md  index.md  llms-full.jsonl  llms-full.txt  llms.txt  llms_config.json  manifest.yaml  mkdocs.yml  move_doc.py 00-21-14-337.py  npm-org-guide.md  outdated_dependencies.json  package-lock.json  package.json  privacy-policy.md  redirects.json  ref_repo_change_alerts.json  repo_state.json  requirements.txt  robots.txt  skill_candidates.json  skill_coverage.json  terms-of-use.md  variables copy.yml  (+1 more)
.snippets/code/: Cargo.toml  README.md  rust-toolchain.toml
.snippets/code/application-devs/interact/: extrinsic-metadata.json  metadata-format.json  metadata-format.md  sudo-metadata-calls.json  sudo-metadata.json  sudo-metadata.md
.snippets/code/apps/quick-start/playground-cli/: termynal-build.html  termynal-deploy.html  termynal-init.html
.snippets/code/apps/tutorials/shared-todo-app/: board.ts  layout.tsx  providers.tsx  signer.ts  snapshot.ts  sync.ts
.snippets/code/chain-interactions/accounts/create-account/: create-account-py.html  create-account-ts.html  create-account.ts  create_account.py
.snippets/code/chain-interactions/accounts/query-account/: dedot-query-account.ts  papi-query-account.ts  polkadot-js-query-account.js
.snippets/code/chain-interactions/query-data/query-rest/: asset-balances-response.html  asset-balances-response.json  asset-details-response.html  asset-details-response.json  asset-metadata-response.html  asset-metadata-response.json  balance-info-response.html  balance-info-response.json  block-response.html  block-response.json
.snippets/code/chain-interactions/send-transactions/calculate-transaction-fees/: papi-fee-calculator-output.html  papi-fee-calculator.ts  polkadotjs-fee-calculator-output.html  polkadotjs-fee-calculator.ts
.snippets/code/chain-interactions/send-transactions/pay-fees-with-different-tokens/: fee-payment-transaction-output.html
.snippets/code/chain-interactions/store-data/bulletin-chain/: renew-data-ts.html  store-data-ts.html  store-data.ts
.snippets/code/develop/interoperability/best-practices-for-teleporting-assets/: account-existence.js  account-existence.ts  asset-conversion-api.ts  dry-run-example.ts  papi-query-account.ts  tx-payment-api.ts  xcm-delivery-fees.ts  xcm-execution-fees.ts
.snippets/code/develop/interoperability/xcm-config/: barrier-example.rs  xcm-config-trait.rs
.snippets/code/develop/interoperability/xcm-observability/: forward-id-for.ts
.snippets/code/develop/interoperability/xcm-runtime-apis/: call-example-output.html  call-example.js  query-assets-output.html  query-assets.js  query-delivery-fees-output.html  query-delivery-fees.js  query-weight-to-fee-output.html  query-weight-to-fee.js  query-xcm-weight-output.html  query-xcm-weight.js  xcm-example-output.html  xcm-example.js
.snippets/code/develop/parachain-devs/parachain-maintenance/: runtime_version.rs
.snippets/code/develop/smart-contracts/local-development-node/: local-development-node-1.html  local-development-node-2.html
.snippets/code/develop/smart-contracts/native-evm-contracts/: ether-js-browser-connection.js  ether-js-server-connection.js
.snippets/code/develop/smart-contracts/parachain-contracts/: check-token-supply.js
.snippets/code/develop/smart-contracts/wasm-ink/: constructors.rs  errors.rs  events.rs  flipper.rs  messages.rs  storage.rs
.snippets/code/develop/toolkit/integrations/: signer-cli-sign-output.html  signer-cli-sign.html  signer-cli-submit-full-output.html  signer-cli-submit-output.html  subkey-generate-output.html  txwrapper-output.html
.snippets/code/dummy/: Cargo.toml
.snippets/code/dummy/src/: lib.rs
.snippets/code/get-support/: generate-llms-output.html
.snippets/code/infrastructure/general/: bootnode.conf
.snippets/code/infrastructure/general/setup-secure-wss/: apache2-config.md  nginx-config.md  nginx-rate-limit.md
.snippets/code/infrastructure/running-a-node/setup-full-node/: run-node.html  run-node.md  setup-full-node-1.html
.snippets/code/infrastructure/running-a-node/setup-secure-wss/: nginx-rate-limit.md
.snippets/code/infrastructure/setup-secure-wss/: nginx-config.md
.snippets/code/node-infrastructure/run-a-node/full-node/: run-node.html  setup-full-node-1.html  setup-full-node-2.html
.snippets/code/node-infrastructure/run-a-node/secure-wss/: install-apache2.md
.snippets/code/nodes-and-validators/run-a-node/index/: setup-full-node-2.html
.snippets/code/nodes-and-validators/run-a-node/secure-wss/: apache2-config.md  install-openssl.md
.snippets/code/parachains/customize-runtime/add-existing-pallets/: pallet-basic-config-trait.rs  snippet-01.toml
.snippets/code/parachains/customize-runtime/index/: pallet-skeleton.rs
.snippets/code/parachains/install-polkadot-sdk/: termynal-1.html  termynal-2.html
.snippets/code/parachains/interoperability/index/: XCM-first-look.rs
.snippets/code/parachains/pallet-development/benchmark-pallet/: dispatchable-pallet-weight.rs  weight-config.rs
.snippets/code/parachains/pallet-development/index/: pallet-config.rs  pallet-storage.rs
.snippets/code/parachains/pallet-development/mock-runtime/: genesis-config-custom.rs  genesis-config.rs
.snippets/code/parachains/runtime-maintenance/runtime-upgrades/: reset_something.rs  runtime-compilation.html
.snippets/code/parachains/runtime-maintenance/storage-migrations/: example-2.rs
.snippets/code/parachains/testing/run-a-parachain-network/: collator-groups-example.toml  parachain-example.toml  relaychain-example-node-groups.json
.snippets/code/polkadot-protocol/basics/accounts/: account-data-structure-1.rs  account-data-structure-2.rs
.snippets/code/polkadot-protocol/basics/blocks-transactions-fees/: data-encode-decode.rs
.snippets/code/polkadot-protocol/basics/chain-data/: extrinsic-metadata.json
(+2751 files in other folders)
