[package]
name = "subxt-send-tx-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "send_transfer"
path = "src/bin/send_transfer.rs"

[dependencies]
subxt = { version = "0.35", default-features = false, features = ["macros"] }
subxt-signer = { version = "0.4", features = ["bip39"] }
tokio = { version = "1", features = ["rt", "macros"] }


