[package]
    name = "pallet-custom"
    description = "A custom counter pallet for demonstration purposes."
    version = "0.1.0"
    license = "Unlicense"
    authors.workspace = true
    homepage.workspace = true
    repository.workspace = true
    edition.workspace = true
    publish = false

    [package.metadata.docs.rs]
    targets = ["x86_64-unknown-linux-gnu"]

    [dependencies]
    codec = { features = ["derive"], workspace = true }
    scale-info = { features = ["derive"], workspace = true }
    frame = { features = ["experimental", "runtime"], workspace = true }

    [features]
    default = ["std"]
    std = [
        "codec/std",
        "scale-info/std",
        "frame/std",
    ]

    [workspace.members]
    members = [
        "node",
        "pallets/*",
        "runtime",
    ]